# context

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml  requirements.txt
api/: main.py
core/: database.py  settings.py
models/: __init__.py  chat.py  insight.py  repo_event.py  task_outcome.py
scripts/: init_db.py
services/: auth.py  auto_extract.py  chat.py  embeddings.py  global_summaries.py  insights.py  knowledge.py  llm.py  project.py  repo_events.py  retrieve.py  schemas.py  search.py  summaries.py  task_outcomes.py
